k8s/media-services/jellyfin-media/pixelfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixelfin
  namespace: default
  labels:
    app: pixelfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pixelfin
  template:
    metadata:
      labels:
        app: pixelfin
    spec:
      containers:
        - name: pixelfin
          image: ghcr.io/nothing2obvi/pixelfin:latest
          ports:
            - name: http
              containerPort: 1280
              protocol: TCP
          volumeMounts:
            - name: pixelfin-data
              mountPath: /app/output
              subPath: shared/pixelfin/output
            - name: pixelfin-data
              mountPath: /app/data
              subPath: shared/pixelfin/data
      volumes:
        - name: pixelfin-data
          persistentVolumeClaim:
            claimName: pixelfin-data
