k8s/media-services/jellyfin-media/pixelfin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pixelfin-service
  namespace: default
  labels:
    app: pixelfin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: pixelfin
